<resources>
    <string name="app_name">Exercicio2</string>
    <string name="escolha_um_n_mero_entre_1_e_10">Escolha um número (entre 1 e 10)</string>
    <string name="n_mero">Número</string>
    <string name="adivinhar">Adivinhar</string>
    <string name="o_n_mero_que_eu_estou_a_pensar_maior">O número que eu estou a pensar é maior</string>
    <string name="tentativas">Tentativas:</string>
    <string name="textview">TextView</string>
    <string name="jogos">Jogos:</string>
    <string name="textview2">TextView</string>
    <string name="Jogos">TextView</string>
</resources>