<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@tools:sample/avatars"
        tools:layout_editor_absoluteX="188dp"
        tools:layout_editor_absoluteY="40dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="92dp"
        android:text="@string/escolha_um_n_mero_entre_1_e_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutNumero"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="164dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextInputEditNumero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/n_mero"
            android:textColorHint="#616161" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonAdivinhar"
        android:layout_width="407dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="268dp"
        android:text="@string/adivinhar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds,VisualLintButtonSize" />

    <TextView
        android:id="@+id/textViewResultado"
        android:layout_width="397dp"
        android:layout_height="148dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="360dp"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="123dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="540dp"
        android:text="@string/tentativas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textViewTentativas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="596dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="332dp"
        android:layout_marginTop="540dp"
        android:text="@string/jogos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewJogos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="332dp"
        android:layout_marginTop="576dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>